--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@ input[type="text"]:focus{outline:none; box-shadow:0 0 10px var(--gold);}
   <!-- Prize Section -->
   <div class="prize-section">
     <div class="prize-list">
-      <div class="prize">🎁⛄ PLATINUM<br/><small>10,000</small></div>
-      <div class="prize">🎁⛄ DIAMOND<br/><small>20,000</small></div>
-      <div class="prize">🎁⛄ SILVER DIAMOND<br/><small>50,000</small></div>
-      <div class="prize">🎁⛄ PERFECT DIAMOND<br/><small>100,000</small></div>
-      <div class="prize">🎁⛄ EPIC DIAMOND<br/><small>150,000</small></div>
-      <div class="prize">🎁⛄ MHYTIC DIAMOND<br/><small>400,000</small></div>
+      <div class="prize">🎁⛄ HADIAH PLATINUM<br/><small>10,000</small></div>
+      <div class="prize">🎁⛄ HADIAH DIAMOND<br/><small>20,000</small></div>
+      <div class="prize">🎁⛄ HADIAH SILVER DIAMOND<br/><small>50,000</small></div>
+      <div class="prize">🎁⛄ HADIAH PERFECT DIAMOND<br/><small>100,000</small></div>
+      <div class="prize">🎁⛄ HADIAH EPIC DIAMOND<br/><small>150,000</small></div>
+      <div class="prize">🎁⛄ HADIAH MHYTIC DIAMOND<br/><small>400,000</small></div>
     </div>
   </div>
 
